Fix error messages for incorrect hex literals https://bugs.webkit.org/show_bug.cgi?id=133998

Reviewed by Mark Lam.

Source/JavaScriptCore:
Ensure that the error messages for bogus hex literals actually
make sense.

* parser/Lexer.cpp:
(JSC::Lexer<T>::lex):
* parser/ParserTokens.h:

LayoutTests:
Update tests for sane error messages.

* sputnik/Conformance/07_Lexical_Conventions/7.8_Literals/7.8.3_Numeric_Literals/S7.8.3_A6.1_T1-expected.txt:
* sputnik/Conformance/07_Lexical_Conventions/7.8_Literals/7.8.3_Numeric_Literals/S7.8.3_A6.1_T2-expected.txt:
* sputnik/Conformance/07_Lexical_Conventions/7.8_Literals/7.8.3_Numeric_Literals/S7.8.3_A6.2_T1-expected.txt:
* sputnik/Conformance/07_Lexical_Conventions/7.8_Literals/7.8.3_Numeric_Literals/S7.8.3_A6.2_T2-expected.txt:

Canonical link: https://commits.webkit.org/151950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170079 268f45cc-cd09-0410-ab3c-d52691b4dbfc